[package]
authors = ["Edward Yang <edward.yang6771@gmail.com>"]
name = "visualizers"
version = "0.1.0"

[dependencies]
app_dirs = "1.1.1"
cairo-rs = "0.1.1"
dft = "0.5.3"
gdk = "0.5.1"
gdk-pixbuf = "0.1.1"
gdk-sys = "0.3.2"
glib = "0.1.1"
gtk = "0.1.1"
lazy_static = "0.2.2"
libc = "0.2.20"
libpulse-sys = "0.0.0"
serde = "0.9.6"
serde_derive = "0.9"
serde_yaml = "0.6.0"
time = "0.1.36"

[dependencies.pa_simple]
git = "https://github.com/efyang/pa-simple-rs"
